--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "scripts": {
     "prepare": "gulp all:tsconfig.json && gulp :tslint.json && gulp dist",
     "test": "gulp :lint && gulp test",
-    "prestart": "gulp example:build",
-    "start": "node build/example/example/main.js",
+    "prestart": "gulp main:build",
+    "start": "node build/main/example/main.js",
     "prepublishOnly": "npm test",
     "lint": "gulp :lint:fix"
   },
@@ -33,33 +33,24 @@
     "ts-tagged": "^1.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.3",
+    "@types/chai": "^4.1.7",
+    "@types/gulp": "^4.0.5",
     "@types/minimist": "^1.2.0",
-    "@types/mocha": "^5.2.0",
-    "@types/node": "^9.6.6",
-    "chai": "^4.1.2",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.12.18",
+    "chai": "^4.2.0",
     "gulp": "^4.0.0",
     "gulp-cli": "^2.0.1",
     "minimist": "^1.2.0",
-    "ts-node": "^6.0.1",
-    "tslint": "^5.9.1",
-    "turbo-gulp": "^0.17.1",
-    "typescript": "^2.8.3"
+    "ts-node": "^7.0.1",
+    "tslint": "^5.12.1",
+    "turbo-gulp": "^0.18.0",
+    "typescript": "^3.2.4"
   },
-  "nyc": {
-    "include": [
-      "build/test/lib/**/*.js",
-      "build/test/lib/**/*.mjs"
-    ],
-    "reporter": [
-      "text",
-      "html"
-    ],
-    "extension": [
-      ".mjs"
+  "c88": {
+    "match": [
+      "build/test/lib/*.{js,mjs}",
+      "build/test/lib/**/*.{js,mjs}"
     ]
-  },
-  "esm": {
-    "mode": "strict"
   }
 }
