--- a/package.json
+++ b/package.json
@@ -19,33 +19,43 @@
   ],
   "license": "MIT",
   "scripts": {
-    "prepare": "gulp all:tsconfig.json && gulp :tslint.json && gulp dist",
-    "test": "gulp :lint && gulp test",
-    "prestart": "gulp main:build",
-    "start": "node build/main/example/main.js",
-    "prepublishOnly": "npm test",
-    "lint": "gulp :lint:fix"
+    "build": "gulp lib:build",
+    "watch": "gulp lib:watch",
+    "test": "gulp test",
+    "lint": "gulp lint",
+    "format": "gulp format",
+    "typedoc": "gulp lib:typedoc",
+    "dist": "gulp lib:dist",
+    "prepare": "gulp all:tsconfig.json && gulp tslint.json && gulp dist",
+    "pretest": "gulp lint",
+    "prepublishOnly": "echo \"Use \\`gulp lib:publish\\`\" && exit 1"
+  },
+  "pre-commit": {
+    "run": [
+      "lint"
+    ]
+  },
+  "engines": {
+    "node": ">=13.2"
   },
   "dependencies": {
-    "incident": "^3.1.1",
-    "kryo": "^0.7.0",
-    "semantic-types": "^0.1.1",
-    "ts-tagged": "^1.0.0"
+    "incident": "^3.2.0",
+    "semantic-types": "^0.1.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/gulp": "^4.0.5",
+    "@types/chai": "^4.2.5",
+    "@types/gulp": "^4.0.6",
     "@types/minimist": "^1.2.0",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.18",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.12",
     "chai": "^4.2.0",
-    "gulp": "^4.0.0",
-    "gulp-cli": "^2.0.1",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.2.0",
     "minimist": "^1.2.0",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.12.1",
-    "turbo-gulp": "^0.18.0",
-    "typescript": "^3.2.4"
+    "ts-node": "^8.5.2",
+    "tslint": "^5.20.1",
+    "turbo-gulp": "^0.20.2",
+    "typescript": "^3.7.2"
   },
   "c88": {
     "match": [
