--- a/.gitignore
+++ b/.gitignore
@@ -12,30 +12,22 @@
 ###############################################################################
 # Build                                                                       #
 ###############################################################################
-/build/
-/dist/
-/coverage/
-/.nyc_output/
+/lib/
+/test/
 
 ###############################################################################
 # Dependencies                                                                #
 ###############################################################################
 # Node dependencies directory
-node_modules
-
-# Typings definitions
-typings
-
-###############################################################################
-# Generated configuration files                                               #
-###############################################################################
-src/**/tsconfig.json
-
-###############################################################################
-# Local configuration                                                         #
-###############################################################################
-test-config.js
-tslint.json
+node_modules/
+# Yarn without Zero-Installs
+# https://yarnpkg.com/advanced/qa#which-files-should-be-gitignored
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
 
 ###############################################################################
 # Temporary files                                                             #
