--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.3.0",
   "homepage": "https://github.com/open-flash/stream",
   "description": "Streams for Open Flash",
-  "main": "dist/lib/index.js",
-  "types": "dist/lib/index.d.ts",
-  "private": true,
   "publishConfig": {
     "access": "public"
   },
@@ -19,16 +16,13 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gulp lib:build",
-    "watch": "gulp lib:watch",
-    "test": "gulp test",
-    "lint": "gulp lint",
-    "format": "gulp format",
-    "typedoc": "gulp lib:typedoc",
-    "dist": "gulp lib:dist",
-    "prepare": "gulp all:tsconfig.json && gulp tslint.json && gulp dist",
-    "pretest": "gulp lint",
-    "prepublishOnly": "echo \"Use \\`gulp lib:publish\\`\" && exit 1"
+    "clean": "rimraf \"./@(lib|test)\"",
+    "lint": "eslint \"./src/**/*.ts\"",
+    "format": "eslint --fix \"./src/**/*.ts\"",
+    "build": "tsc --build src/lib/tsconfig.json",
+    "prepack": "yarn run build",
+    "test:build": "tsc --build src/test/tsconfig.json",
+    "test": "yarn run test:build && mocha \"test/**/*.spec.js\""
   },
   "pre-commit": {
     "run": [
@@ -36,32 +30,34 @@
     ]
   },
   "engines": {
-    "node": ">=13.2"
+    "node": ">=14.13.1"
   },
   "dependencies": {
-    "incident": "^3.2.0",
+    "incident": "^3.2.1",
     "semantic-types": "^0.1.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.5",
-    "@types/gulp": "^4.0.6",
-    "@types/minimist": "^1.2.0",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.12",
-    "chai": "^4.2.0",
-    "codecov": "^3.6.1",
-    "gulp": "^4.0.2",
-    "gulp-cli": "^2.2.0",
-    "minimist": "^1.2.0",
-    "ts-node": "^8.5.2",
-    "tslint": "^5.20.1",
-    "turbo-gulp": "^0.20.2",
-    "typescript": "^3.7.2"
+    "@types/chai": "^4.2.17",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "chai": "^4.3.4",
+    "eslint": "^7.25.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "mocha": "^8.3.2",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.2.4"
   },
-  "c88": {
-    "match": [
-      "build/test/lib/*.{js,mjs}",
-      "build/test/lib/**/*.{js,mjs}"
-    ]
-  }
+  "type": "module",
+  "exports": {
+    ".": "./lib/index.js",
+    "./lib/": "./lib/"
+  },
+  "main": "./lib/index.js",
+  "module": "./lib/index.js",
+  "types": "./lib/index.d.ts",
+  "files": [
+    "./lib/"
+  ]
 }
