Drop `lib` prefix and `.js` extension from deep-imports

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,10 @@
 ###############################################################################
 # Build                                                                       #
 ###############################################################################
+/coverage/
+/typedoc/
 /lib/
+/main/
 /test/
 
 ###############################################################################
@@ -28,6 +31,12 @@ node_modules/
 !.yarn/sdks
 !.yarn/versions
 .pnp.*
+
+###############################################################################
+# Local configuration                                                         #
+###############################################################################
+test-config.js
+.env
 
 ###############################################################################
 # Temporary files                                                             #
