--- a/package.json
+++ b/package.json
@@ -15,6 +15,18 @@
     "ast"
   ],
   "license": "MIT",
+  "type": "module",
+  "exports": {
+    ".": "./lib/index.js",
+    "./*": "./lib/*.js"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./lib/*"
+      ]
+    }
+  },
   "scripts": {
     "clean": "rimraf \"./@(lib|test)\"",
     "lint": "eslint \"./src/**/*.ts\"",
@@ -24,11 +36,6 @@
     "test:build": "tsc --build src/test/tsconfig.json",
     "test": "yarn run test:build && mocha \"test/**/*.spec.js\""
   },
-  "pre-commit": {
-    "run": [
-      "lint"
-    ]
-  },
   "engines": {
     "node": ">=14.13.1"
   },
@@ -37,27 +44,20 @@
     "semantic-types": "^0.1.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.17",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^15.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@types/chai": "^4.2.21",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "chai": "^4.3.4",
-    "eslint": "^7.25.0",
+    "eslint": "^7.31.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "mocha": "^8.3.2",
+    "mocha": "^9.0.2",
     "rimraf": "^3.0.2",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.5"
   },
-  "type": "module",
-  "exports": {
-    ".": "./lib/index.js",
-    "./lib/": "./lib/"
-  },
-  "main": "./lib/index.js",
-  "module": "./lib/index.js",
-  "types": "./lib/index.d.ts",
   "files": [
-    "./lib/"
+    "./lib/**/*.(js|map|ts)",
+    "./src/lib/**/*.ts"
   ]
 }
